# CLDL

./: .gitignore  CMakeLists.txt  README  README.md
include/: Layer.h  Neuron.h
include/clbp/: Layer.h  Net.h  Neuron.h
include/cldl/: CppThread.h  Layer.h  Net.h  Neuron.h  bpThread.h  doxyConfigFileCLDL
lib/: Layer.cpp  Net.cpp  Neuron.cpp  bpThread.cpp
tests/: CMakeLists.txt  main.cpp  unitTest.cpp  unitTest.h
